--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,22 +10,22 @@
     tools:context="pl.akademiakodu.lekcja5.MainActivity">
 
 
-    <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/spinner"
-        android:layout_centerVertical="true"
+    <WebView
+        android:layout_width="300dp"
+        android:layout_height="250dp"
+        android:id="@+id/webView"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
-    <pl.akademiakodu.lekcja5.OwnTextView
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
+        android:size="40sp"
         android:id="@+id/textView"
-        android:layout_above="@+id/spinner"
-        android:layout_alignRight="@+id/spinner"
-        android:layout_alignEnd="@+id/spinner" />
-
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="66dp" />
 
 </RelativeLayout>
