--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,22 +10,10 @@
     tools:context="pl.akademiakodu.lekcja5.MainActivity">
 
 
-    <WebView
-        android:layout_width="300dp"
-        android:layout_height="250dp"
-        android:id="@+id/webView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
-        android:textSize="25sp"
-        android:id="@+id/textView"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="66dp" />
-
+        android:layout_height="200dp"
+        android:id="@+id/frameLayout"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"></FrameLayout>
 </RelativeLayout>
