--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,21 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:id="@+id/frameLayout"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"></FrameLayout>
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
+
+    </FrameLayout>
+
+    <fragment
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:id="@+id/ourFragment"
+        class="pl.akademiakodu.lekcja5.BlankFragment"
+        tools:layout="@layout/fragment_blank"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"></fragment>
+
+
 </RelativeLayout>
